src/objects/Incentive__c.object
<CustomObject>
    <fields>
        <fullName>Aircraft_Type_Downgrade_Guaranteed__c</fullName>
        <label>Aircraft Type Downgrade Guaranteed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Aircraft_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aircraft_Type_Free__c</fullName>
        <label>Aircraft Type Free</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Aircraft_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aircraft_Type_Guaranteed__c</fullName>
        <label>Aircraft Type Guaranteed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Aircraft_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Program_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Program Year</label>
        <referenceTo>Client_Program_Year__c</referenceTo>
        <relationshipLabel>Incentives</relationshipLabel>
        <relationshipName>Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Downgrades_Note__c</fullName>
        <label>Downgrades Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Free_Upgrades_Note__c</fullName>
        <label>Free Upgrades Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incentives_Status__c</fullName>
        <label>Incentives Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_owner_for_this_incentive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of owner for this incentive</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Incentives</relationshipLabel>
        <relationshipName>Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Free_Upbrades__c</fullName>
        <label>Number of Free Upgrades</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Guaranteed_Upgrades__c</fullName>
        <label>Number of Guaranteed Upgrades</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Short_Leg_Waivers__c</fullName>
        <label>Number of Short-Leg Waivers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Simultaneous_Usages__c</fullName>
        <label>Number of Simultaneous Usages</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_downgrades__c</fullName>
        <label>Number of Guaranteed Downgrades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Incentives_Notes__c</fullName>
        <label>Other Incentives Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Short_Leg_Waivers_Used__c</fullName>
        <label>Total Short Leg Waivers Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upgrades_Note__c</fullName>
        <label>Upgrades Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>of_Hours_Free_Upgrades__c</fullName>
        <label># of Hours Free Upgrades</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Hours_Guaranteed_Upgrade__c</fullName>
        <label># of Hours Guaranteed Upgrade</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Incentive</label>
    <nameField>
        <displayFormat>IN-{000000}</displayFormat>
        <label>Incentive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>